--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^8.5.2",
     "@mui/x-date-pickers": "^8.5.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "antd": "^5.27.1",
     "arabic-reshaper": "^1.1.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
@@ -26,6 +27,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
@@ -45,7 +47,7 @@
     "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.22.0",
     "xlsx": "^0.18.5",
-    "yup": "^1.6.1"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
