--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
