--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "moment-hijri": "^3.0.0",
+    "moment-timezone": "^0.6.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
@@ -47,6 +48,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.22.0",
     "xlsx": "^0.18.5",
